Spacing fixes + changes for templates

--- a/packages/components-css/footer/index.scss
+++ b/packages/components-css/footer/index.scss
@@ -27,7 +27,7 @@
     }
   }
 
-  .nijmegen-link-list__link {
+  .nijmegen-link-list__link:any-link {
     color: inherit;
 
     &::before {
