--- a/packages/components-css/spacing/src/index.scss
+++ b/packages/components-css/spacing/src/index.scss
@@ -31,5 +31,6 @@
   @include spacing-nijmegen-table-of-contents;
   @include spacing-utrecht-page-body;
   @include spacing-nijmegen-html;
+  @include spacing-nijmegen-step-list;
 }
 @import "./nested";
